mengubah warna footer

--- a/praktik3/footer.html
+++ b/praktik3/footer.html
@@ -1,4 +1,4 @@
-<footer style="text-align: center; background-color: #00ff00; padding: 1px;">
+<footer style="text-align: center; background-color: #0000ff; padding: 1px;">
     <h4>Developed by <a href="https://instagram.com/aldi.mds" target="display">
             Aldi Mahardiansyah</a> &copy; 2023
     </h4>
